--- a/style.css
+++ b/style.css
@@ -8,13 +8,37 @@
    --cyan:#006970;
    --dark-cyan:#004241;
    --gray:#f2f2f2;
-   --trasparent-white:rgba(255, 255, 255, 0, 75):
+   --trasparent-white:rgba(255, 255, 255, 0, 75);
+}
+body{
+    padding: 5.5rem 1.5rem;
 }
 h2{
     font-family: 'Big Shoulders Display', sans-serif;
+    text-transform: uppercase;
+    font-size:2.5rem ;
+    color:var(--gray) ;
+    margin-block:1.875rem ;
 }
 p{
     font-family: 'Lexend Deca', sans-serif;
+    font-size:0.9375rem ;
+    color:var(--transoarent-while) ;
+    margin-bottom: 1.875rem;
+}
+section{
+    padding: 3rem;
+
+}
+.sedans{
+    background: var(--orange);
+
+}
+.suvs{
+    background: var(--cyan);
+}
+.luxuosos{
+    background: var(--dark-cyan);
 }
 a{
     font-family: 'Lexend Deca', sans-serif;
