--- a/style.css
+++ b/style.css
@@ -25,6 +25,18 @@ p{
     font-size:0.9375rem ;
     color:var(--transoarent-while) ;
     margin-bottom: 1.875rem;
+    line-height:1.5625rem;
+}
+a{
+    font-family: 'Lexend Deca', sans-serif;
+    display: block;
+    text-align: none;
+    border: 2px solid var(--gray);
+    width: fit-content;
+    font-size: 0.9375rem;
+    padding: 0.75rem 2.5rem;
+    border-radius: 1.5625rem;
+    background: var(--gray);
 }
 section{
     padding: 3rem;
@@ -32,6 +44,7 @@ section{
 }
 .sedans{
     background: var(--orange);
+    border-radius:8px 8x 0 0;
 
 }
 .suvs{
@@ -39,7 +52,15 @@ section{
 }
 .luxuosos{
     background: var(--dark-cyan);
+    border-radius: 0 0 8px 8px;
 }
-a{
-    font-family: 'Lexend Deca', sans-serif;
+.sedans a {
+    color: var(--orange);
 }
+.suvs a {
+    color: var(--cyan);
+}
+.luxuosos a {
+    color: var(--dark-cyan);
+}
+
