--- a/style.css
+++ b/style.css
@@ -63,4 +63,32 @@ section{
 .luxuosos a {
     color: var(--dark-cyan);
 }
+@media(min-widht:920px){
+    body{
+        border:1px solid red ;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+    }
+    main{
+        display: flex;
+        max-width: 57.5rem;
+
+    }
+    p{
+        margin-bottom: 5.25rem;
+    }
+    a:hover{
+        background: transparent;
+        color: var(--gray);
+    }
+    .sedans{
+        border-radius: 8px 0 0 8px;
+    }
+}
+.luxuosos{
+    border-radius: 0 8px 8px 0;
+}
 
