--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
    --cyan:#006970;
    --dark-cyan:#004241;
    --gray:#f2f2f2;
-   --trasparent-white:rgba(255, 255, 255, 0, 75);
+   --trasparent-white:rgba(255, 255, 255, 0.75);
 }
 body{
     padding: 5.5rem 1.5rem;
@@ -30,13 +30,13 @@ p{
 a{
     font-family: 'Lexend Deca', sans-serif;
     display: block;
-    text-align: none;
+    text-decoration: none;
     border: 2px solid var(--gray);
     width: fit-content;
     font-size: 0.9375rem;
     padding: 0.75rem 2.5rem;
     border-radius: 1.5625rem;
-    background: var(--gray);
+    background-color: var(--gray);
 }
 section{
     padding: 3rem;
@@ -44,7 +44,7 @@ section{
 }
 .sedans{
     background: var(--orange);
-    border-radius:8px 8x 0 0;
+    border-radius:8px 8px 0 0;
 
 }
 .suvs{
@@ -63,9 +63,8 @@ section{
 .luxuosos a {
     color: var(--dark-cyan);
 }
-@media(min-widht:920px){
+@media(min-width: 920px){
     body{
-        border:1px solid red ;
         height: 100vh;
         display: flex;
         justify-content: center;
@@ -78,17 +77,18 @@ section{
 
     }
     p{
-        margin-bottom: 5.25rem;
+        margin: bottom;
     }
     a:hover{
-        background: transparent;
+        background-color: transparent;
         color: var(--gray);
     }
     .sedans{
         border-radius: 8px 0 0 8px;
     }
+    .luxuosos{
+        border-radius: 0 8px 8px 0;
+    }
 }
-.luxuosos{
-    border-radius: 0 8px 8px 0;
-}
+
 
